--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -11,7 +11,7 @@
         "PARAGRAPH":"El surgimiento de los NFTs (Tokens no fungibles) definidos como activos digitales que estan basados en redes blockchain, han llegado a revolucionar el mundo del arte, dando lugar al Cryptoarte que es una forma de introducir escasez y valor al arte en forma digital, explorando nuevas estéticas, donde participan diferentes artistas desde fotografos hasta artistas en ilustración digital, arte glitch / gif, collage de video, arte con IA, realidad virtual entre otros.Nosotros te acompañamos en el proceso para identificar qué obras pueden ser un NFT, como producirlas en las diferentes plataformas y a difundir tu portafolio de arte digital, ademas de formar parte de comunidades de artistas digitales en Lationoamerica."
     },
     "DIGITAL-PROJECTS":{
-        "TITLE":"COACHING DIGITAL PROJECTS",
+        "TITLE":"COACHING PROYECTOS DIGITALES",
         "PARAGRAPH":"El coach digital exponencial se diferencia por acompañar a las personas a  reinventarse ofreciéndoles conocimientos y experimentación a través de la sinergia del uso de las nuevas tecnologías y la aplicación de la inteligencia emocional.Antes de comenzar un proyecto digital debes tener una hoja de ruta y conocer en que etapa te encuentras, siguiendo nuestra metodologia AVALON te ayudaremos a  coocrear juntos tu nueva realidad de forma simple, creativa y efectiva, brinadandote un coaching digital exponencial sin días y horarios cerrados, utilizando las diferentes plataformas y aplicaciones en las cuales un coach estara disponible para tomar sesiones donde obtendras una estimación del costo según la cantidad de tiempo de la sesión on-line."
     },
     "COMMERCE":{
