--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -27,27 +27,27 @@
         "PARAGRAPH":"KetanoLab es una Agencia de Servicios Digitales enfocada en aportar un valor diferencial, enlazando plataformas, mejorando la experiencia de consumo adaptándose a la transformación digital y brindando servicios que vayan  en tendencia a las nuevas  tecnologias siguiendo al ritmo de cada proyecto."
     },
     "BEGINNING":{
-        "TITLE-1":"SISTEMAS DIGITALES EN LÍNEA",
+        "TITLE-1":"SISTEMAS DIGITALES",
         "TITLE-2":"E-COMMERCE",
-        "TITLE-3":"SERVICIOS",
-        "TITLE-3.1":"WEB",
+        "TITLE-3":"HEAD HUNTING DEVELOPERS",
+        "TITLE-3.1":"",
         "TITLE-4":"APPs",
-        "TITLE-5":"COACHING DIGITAL NFT",
+        "TITLE-5":"METAVERSO",
         "COACHING":"COACHING",
         "COACHING-1.1":"TURISMO",
         "COACHING-1.2":"VIRTUAL",
-        "COACHING-2.1":"PROYECTOS",
-        "COACHING-2.2":"DIGITALES",
-        "TITLE-6":"ARTE DIGITAL",
-        "TITLE-7":"CONSULTORÍA DE ESTRATEGIA DIGITAL",
+        "COACHING-2.1":"DIGITAL",
+        "COACHING-2.2":"",
+        "TITLE-6":"ARTE DIGITAL \n\n NFT",
+        "TITLE-7":"ESTRATEGIA DIGITAL",
         "TITLE-8":"PRODUCCIÓN",
         "TITLE-8.1":"DIGITAL",
         "TITLE-9":"MARKETING",
         "TITLE-9.1":"EXPONENCIAL",
-        "TITLE-10":"DESARROLLO DE SOLUCIONES",
+        "TITLE-10":" SOLUCIONES",
         "TITLE-10.1":"BLOCKCHAIN",
         "TITLE-11":"DAPPs",
-        "TITLE-12":"HEAD HUNTING DEVELOPERS",
+        "TITLE-12":"",
         "TITLE-12.1":"NUEVA ZELANDA"
     },
     "MARKETING":{
