Limpieza y desarrollo de un nuevo navbar

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -62,11 +62,11 @@
     },
     "NAV":{
         "TITLE":"Nav Bar",
-        "TITLE-1":"NOSOTROS",
-        "TITLE-2":"NUESTRA EXPERIENCIA",
-        "TITLE-3":"ALIADOS",
-        "TITLE-4":"OFICINA VIRTUAL",
-        "TITLE-5":"INICIO"
+        "TITLE-1":"Nosotros",
+        "TITLE-2":"Nuestra experiencia",
+        "TITLE-3":"Aliados",
+        "TITLE-4":"Oficina virtual",
+        "TITLE-5":"Inicio"
     },
     "WE":{
         "TITLE":"NOSOTROS",
