Álex Quijote. Octavo Commit.
Documentos cambiados:

1)inicio.component.html 2)inicio.component.css 3)es.json

Cambios realizados:
1) Cambios aplicados de Milenka. Eliminación y reestructuración de satélites.

2)Creación de un nuevo satélite: "sistemas web", por tanto, modifiqué el
archivo es.json, para agregar dicha etiqueta.

3) Agregar efecto :hover transform:scale() en las imágenes centrales.

4) Mejoramiento de los contenedores de las imágenes centrales.

5) Cambio de color de columnas para maquetar, le puse un color más
cercano al original, para observar cómo va a quedar.

Nota: El avance en el responsive se perdió, al realizar todos estos cambios,
los media querys, tendré que volver a iniciarlos con los nuevos ajustes.

Fin del Octavo Commit.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -37,12 +37,13 @@
         "COACHING-2":"Coaching digital",
         "TITLE-6":"Arte digital NFT",
         "TITLE-7":"Estrategia digital",
-        "TITLE-8":"Producción digital",
+        "TITLE-8":"Producción digital inmersiva",
         "TITLE-9":"Marketing exponencial",
-        "TITLE-10":" Soluciones blockchain",
+        "TITLE-10":"Blockchain",
         "TITLE-10.1":"Blockchain",
         "TITLE-11":"DAPPs",
-        "TITLE-12":"Nueva Zelanda"
+        "TITLE-12":"Nueva Zelanda", 
+        "TITLE-13":"Sistemas web"
     },
     "MARKETING":{
         "TITLE":"MARKETING EXPONENCIAL",
