--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -67,7 +67,7 @@
     "WE":{
         "TITLE":"NOSOTROS",
         "PERSON-1":"Roger Prado De La Fuente",
-        "PERSON-2":"Pedro Terán",
+        "PERSON-2":"Pedro Terán Gezn",
         "PERSON-3":"Milenka E. Pereira",
         "PARAGRAPH":"KetanoLab es una Agencia de Servicios Digitales enfocada en aportar un valor diferencial, enlazando plataformas, mejorando la experiencia de consumo adaptándose a la transformación digital y brindando servicios que vayan  en tendencia a las nuevas  tecnologias siguiendo al ritmo de cada proyecto."
     },
