--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -80,7 +80,9 @@
         "TITLE":"NOSOTROS",
         "PERSON-1":"Roger Prado De La Fuente",
         "PERSON-2":"Pedro Terán Gezn",
-        "PERSON-3":"Milenka E. Pereira",
+        "PERSON-2_DESCRIPTION":"Programador y arquitecto de software  con más de 10 años de experiencia trabajando en proyectos globales y dirigido equipos de desarrollo técnico multiculturales.",
+        "PERSON-3":"Milenka Escobar Pereira",
+        "PERSON-3_DESCRIPTION":"Gestora de proyectos tecnológico-culturales en América del Sur para agencias de desarrollo internacionales, instituciones públicas y de la sociedad civil; considerando la Cultura e Innovación (C+I) para generar cambios positivos haciendo de cada proyecto una experiencia.",
         "PARAGRAPH":"KetanoLab es una Agencia de Servicios Digitales enfocada en aportar un valor diferencial, enlazando plataformas, mejorando la experiencia de consumo adaptándose a la transformación digital y brindando servicios que vayan  en tendencia a las nuevas  tecnologias siguiendo al ritmo de cada proyecto."
     },
     "PRODUCTION":{
