--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,101 +1,100 @@
 {
-    "HOME":{
-        "SERVICES": "SERVICIOS"
+    "home":{
+        "services": "SERVICIOS"
     },
-    "APPS":{
-        "TITLE":"Aplicaciones Móviles",
-        "PARAGRAPH.0":"El desarrollo de aplicaciones para dispositivos móviles permite brindar un funcionamiento y recursos que aportan un acceso más rápido y sencillo a la información necesaria, con versatilidad en cuanto a su utilización y atribución de funcionalidades.Desarrollamos contigo",
-        "PARAGRAPH.1":"aplicaciones moviles bajo las plataformas Android y iOS que permitan buscar posibilidades nuevas y fomentar la creatividad, dependiendo del tipo de contenido que se quiere ofrecer, con el fin de brindar al usuario una experiencia integral mediante  el uso de diferentes herramientas digitales."
+    "apps":{
+        "title":"Aplicaciones Móviles",
+        "paragraph.0":"El desarrollo de aplicaciones para dispositivos móviles permite brindar un funcionamiento y recursos que aportan un acceso más rápido y sencillo a la información necesaria, con versatilidad en cuanto a su utilización y atribución de funcionalidades.Desarrollamos contigo",
+        "paragraph.1":"aplicaciones moviles bajo las plataformas Android y iOS que permitan buscar posibilidades nuevas y fomentar la creatividad, dependiendo del tipo de contenido que se quiere ofrecer, con el fin de brindar al usuario una experiencia integral mediante  el uso de diferentes herramientas digitales."
     },
-    "DIGITAL-ART":{
-        "TITLE":"COACHING ARTE DIGITAL",
-        "PARAGRAPH.0":"El surgimiento de los NFTs (Tokens no fungibles) definidos como activos digitales que estan basados en redes blockchain, han llegado a revolucionar el mundo del arte, dando lugar al Cryptoarte que es una forma de introducir escasez y valor al arte en forma digital, explorando nuevas estéticas, donde participan diferentes artistas desde",
-        "PARAGRAPH.1":" fotografos hasta artistas en ilustración digital, arte glitch / gif, collage de video, arte con IA, realidad virtual entre otros. Nosotros te acompañamos en el proceso para identificar qué obras pueden ser un NFT, como producirlas en las diferentes plataformas y a difundir tu portafolio de arte digital, ademas de formar parte de comunidades de artistas digitales en Lationoamerica."
+    "digital-art":{
+        "title":"COACHING ARTE DIGITAL",
+        "paragraph.0":"El surgimiento de los NFTs (Tokens no fungibles) definidos como activos digitales que estan basados en redes blockchain, han llegado a revolucionar el mundo del arte, dando lugar al Cryptoarte que es una forma de introducir escasez y valor al arte en forma digital, explorando nuevas estéticas, donde participan diferentes artistas desde",
+        "paragraph.1":" fotografos hasta artistas en ilustración digital, arte glitch / gif, collage de video, arte con IA, realidad virtual entre otros. Nosotros te acompañamos en el proceso para identificar qué obras pueden ser un NFT, como producirlas en las diferentes plataformas y a difundir tu portafolio de arte digital, ademas de formar parte de comunidades de artistas digitales en Lationoamerica."
     },
-    "DIGITAL-PROJECTS":{
-        "TITLE":"COACHING PROYECTOS DIGITALES",
-        "PARAGRAPH.0":"El coach digital exponencial se diferencia por acompañar a las personas a  reinventarse ofreciéndoles conocimientos y experimentación a través de la sinergia del uso de las nuevas tecnologías y la aplicación de la inteligencia emocional.Antes de comenzar un proyecto digital debes tener una hoja de ruta y conocer en que etapa te encuentras, siguiendo",
-        "PARAGRAPH.1":"nuestra metodologia AVALON te ayudaremos a  coocrear juntos tu nueva realidad de forma simple, creativa y efectiva, brinadandote un coaching digital exponencial sin días y horarios cerrados, utilizando las diferentes plataformas y aplicaciones en las cuales un coach estara disponible para tomar sesiones donde obtendras una estimación del costo según la cantidad de tiempo de la sesión on-line."
+    "digital-projects":{
+        "title":"COACHING PROYECTOS DIGITALES",
+        "paragraph.0":"El coach digital exponencial se diferencia por acompañar a las personas a  reinventarse ofreciéndoles conocimientos y experimentación a través de la sinergia del uso de las nuevas tecnologías y la aplicación de la inteligencia emocional.Antes de comenzar un proyecto digital debes tener una hoja de ruta y conocer en que etapa te encuentras, siguiendo",
+        "paragraph.1":"nuestra metodologia AVALON te ayudaremos a  coocrear juntos tu nueva realidad de forma simple, creativa y efectiva, brinadandote un coaching digital exponencial sin días y horarios cerrados, utilizando las diferentes plataformas y aplicaciones en las cuales un coach estara disponible para tomar sesiones donde obtendras una estimación del costo según la cantidad de tiempo de la sesión on-line."
     
     },
-    "COMMERCE":{
-        "TITLE":"E-COMMERCE",
-        "PARAGRAPH.0":"En el año 2020 se ha visto un avance de 10 años en el desarrollo del E-comerce y la adaptacion de la realidad aumentada asi como de la  inteligencia artificial seran importantes  en los próximos años; a su vez  se ha visto el surgimiento de marcas locales mas alla de las marcas internacionales en diferentes areas de",
-        "PARAGRAPH.1":"consumo. Ofrecemos el desarrollo de una plataforma E-commerce funcional y creativa que pueda relacionar al vendedor con la comunidad que ha elegido, ya sea que se ofrezca  productos que muestren la filosofia de su propia  marca o  para vender un portafolio de diferentes marcas."
+    "commerce":{
+        "title":"E-COMMERCE",
+        "paragraph.0":"En el año 2020 se ha visto un avance de 10 años en el desarrollo del E-comerce y la adaptacion de la realidad aumentada asi como de la  inteligencia artificial seran importantes  en los próximos años; a su vez  se ha visto el surgimiento de marcas locales mas alla de las marcas internacionales en diferentes areas de",
+        "paragraph.1":"consumo. Ofrecemos el desarrollo de una plataforma E-commerce funcional y creativa que pueda relacionar al vendedor con la comunidad que ha elegido, ya sea que se ofrezca  productos que muestren la filosofia de su propia  marca o  para vender un portafolio de diferentes marcas."
     
     },
-    "DAPPS":{
-        "TITLE":"Aplicaciones Descentralizadas",
-        "PARAGRAPH.0":"La tecnología blockchain vino a revolucionar el mundo, dado que tendrá una amplia repercusión en las finanzas, el marketing y los negocios, desde ya se apuntala a convertirse en una especie de institución tecnológica que hará cambiar las operaciones en bancos, organizaciones y empresas, convirtiendose en el Internet",
-        "PARAGRAPH.1":" del valor.Nosotros estructuramos redes Blockchain públicas y privadas, utilizando diferentes plataformas como Hyperledger y Ethereum entre otras, para ofrecer soluciones que puedan aplicarse a diferentes negocios ya que la innovacion de la tecnologia del blockchain cada vez va creando nuevos caminos."
+    "dapps":{
+        "title":"Aplicaciones Descentralizadas",
+        "paragraph.0":"La tecnología blockchain vino a revolucionar el mundo, dado que tendrá una amplia repercusión en las finanzas, el marketing y los negocios, desde ya se apuntala a convertirse en una especie de institución tecnológica que hará cambiar las operaciones en bancos, organizaciones y empresas, convirtiendose en el Internet",
+        "paragraph.1":" del valor.Nosotros estructuramos redes Blockchain públicas y privadas, utilizando diferentes plataformas como Hyperledger y Ethereum entre otras, para ofrecer soluciones que puedan aplicarse a diferentes negocios ya que la innovacion de la tecnologia del blockchain cada vez va creando nuevos caminos."
     },
-    "EXPERIENCE":{
-        "TITLE":"NUESTRA EXPERIENCIA",
-        "PARAGRAPH":"KetanoLab es una Agencia de Servicios Digitales enfocada en aportar un valor diferencial, enlazando plataformas, mejorando la experiencia de consumo adaptándose a la transformación digital y brindando servicios que vayan  en tendencia a las nuevas  tecnologias siguiendo al ritmo de cada proyecto."
+    "experience":{
+        "title":"NUESTRA EXPERIENCIA",
+        "paragraph":"KetanoLab es una Agencia de Servicios Digitales enfocada en aportar un valor diferencial, enlazando plataformas, mejorando la experiencia de consumo adaptándose a la transformación digital y brindando servicios que vayan  en tendencia a las nuevas  tecnologias siguiendo al ritmo de cada proyecto."
     },
-    "BEGINNING":{
-        "TITLE-1":"Sistemas digitales",
-        "TITLE-2":"E-Commerce",
-        "TITLE-3":"Head hunting developers",
-        "TITLE-4":"Aplicaciones móviles",
-        "TITLE-5":"Metaverso",
-        "COACHING":"Coaching",
-        "COACHING-1":"Turismo virtual",
-        "COACHING-2":"Coaching digital",
-        "TITLE-6":"Arte digital NFT",
-        "TITLE-7":"Estrategia digital",
-        "TITLE-8":"Producción digital inmersiva",
-        "TITLE-9":"Marketing exponencial",
-        "TITLE-10":"Blockchain",
-        "TITLE-10.1":"Blockchain",
-        "TITLE-11":"Aplicaciones descentralizadas",
-        "TITLE-12":"Nueva Zelanda", 
-        "TITLE-13":"Servicios web",
-        "TITLE-14":"Soluciones blockchain"
+    "beginning":{
+        "title-1":"Sistemas digitales",
+        "title-2":"E-Commerce",
+        "title-3":"Head hunting developers",
+        "title-4":"Aplicaciones móviles",
+        "title-5":"Metaverso",
+        "coaching":"Coaching",
+        "coaching-1":"Turismo virtual",
+        "coaching-2":"Coaching digital",
+        "title-6":"Arte digital NFT",
+        "title-7":"Estrategia digital",
+        "title-8":"Producción digital inmersiva",
+        "title-9":"Marketing exponencial",
+        "title-10":"Blockchain",
+        "title-10.1":"Blockchain",
+        "title-11":"Aplicaciones descentralizadas",
+        "title-12":"Nueva Zelanda", 
+        "title-13":"Servicios web",
+        "title-14":"Soluciones blockchain"
     },
-    "MARKETING":{
-        "TITLE":"MARKETING EXPONENCIAL",
-        "PARAGRAPH":"El Marketing exponencial es sociologia aplicada con datos que nos ayudan en la optimizacion integral de un negocio. Nuestro Sistema de Marketing Exponencial esta enfocado en cambiar la mentalidad de un negocio con información digitalizada, empleando o creando una función exponencial de ventas, mediante:",
-        "LIST":"1. Contenido exponencial.",
-        "LIST-1":"2. Alcance Exponencial.",
-        "LIST-2":"3. Confianza digital exponencial.",
-        "LIST-3":"4. Ventas exponenciales.",
-        "LIST-4":"5. Relaciones digitales exponenciales."
+    "marketing":{
+        "title":"MARKETING EXPONENCIAL",
+        "paragraph":"El Marketing exponencial es sociologia aplicada con datos que nos ayudan en la optimizacion integral de un negocio. Nuestro Sistema de Marketing Exponencial esta enfocado en cambiar la mentalidad de un negocio con información digitalizada, empleando o creando una función exponencial de ventas, mediante:",
+        "list":"1. Contenido exponencial.",
+        "list-1":"2. Alcance Exponencial.",
+        "list-2":"3. Confianza digital exponencial.",
+        "list-3":"4. Ventas exponenciales.",
+        "list-4":"5. Relaciones digitales exponenciales."
     },
-    "NAV":{
-        "TITLE":"Nav Bar",
-        "TITLE-1":"Nosotros",
-        "TITLE-2":"Nuestra experiencia",
-        "TITLE-3":"Aliados",
-        "TITLE-4":"Oficina virtual",
-        "TITLE-5":"Inicio"
+    "nav":{
+        "title":"Nav Bar",
+        "title-1":"Nosotros",
+        "title-2":"Nuestra experiencia",
+        "title-3":"Aliados",
+        "title-4":"Oficina virtual",
+        "title-5":"Inicio"
     },
-    "WE":{
-        "TITLE":"NOSOTROS",
-        "PERSON-1":"Roger Prado De La Fuente",
-        "PERSON-2":"Pedro Terán Gezn",
-        "PERSON-2_DESCRIPTION":"Programador y arquitecto de software  con más de 10 años de experiencia trabajando en proyectos globales y dirigido equipos de desarrollo técnico multiculturales.",
-        "PERSON-3":"Milenka Escobar Pereira",
-        "PERSON-3_DESCRIPTION":"Gestora de proyectos tecnológico-culturales en América del Sur para agencias de desarrollo internacionales, instituciones públicas y de la sociedad civil; considerando la Cultura e Innovación (C+I) para generar cambios positivos haciendo de cada proyecto una experiencia.",
-        "PARAGRAPH":"KetanoLab es una Agencia de Servicios Digitales enfocada en aportar un valor diferencial, enlazando plataformas, mejorando la experiencia de consumo adaptándose a la transformación digital y brindando servicios que vayan  en tendencia a las nuevas  tecnologias siguiendo al ritmo de cada proyecto."
+    "we":{
+        "title":"NOSOTROS",
+        "person-1":"Roger Prado De La Fuente",
+        "person-2":"Pedro Terán Gezn",
+        "person-2_description":"Programador y arquitecto de software  con más de 10 años de experiencia trabajando en proyectos globales y dirigido equipos de desarrollo técnico multiculturales.",
+        "person-3":"Milenka Escobar Pereira",
+        "person-3_description":"Gestora de proyectos tecnológico-culturales en América del Sur para agencias de desarrollo internacionales, instituciones públicas y de la sociedad civil; considerando la Cultura e Innovación (C+I) para generar cambios positivos haciendo de cada proyecto una experiencia.",
+        "paragraph":"KetanoLab es una Agencia de Servicios Digitales enfocada en aportar un valor diferencial, enlazando plataformas, mejorando la experiencia de consumo adaptándose a la transformación digital y brindando servicios que vayan  en tendencia a las nuevas  tecnologias siguiendo al ritmo de cada proyecto."
     },
-    "PRODUCTION":{
-        "TITLE":"PRODUCCIÓN DIGITAL",
-        "PARAGRAPH":"Imaginamos contigo tu proyecto con el fin de elevar tus productos audiovisuales digitales para redes sociales, paginas web, con animaciones 2D y 3D."
+    "production":{
+        "title":"PRODUCCIÓN DIGITAL",
+        "paragraph":"Imaginamos contigo tu proyecto con el fin de elevar tus productos audiovisuales digitales para redes sociales, paginas web, con animaciones 2D y 3D."
     },
-    "SERVICES":{
-        "TITLE":"SERVICIOS WEB",
-        "PARAGRAPH":"Tener un sitio web hoy en día es mas accesible y fundamental para estar inmersos en las oportunidades que nos ofrece el mercado virtual.   Nosrotros te acompanamos a disenar tu proyecto con un diseno y desarrollo web vanguardista y creativo transformando tu web en una experiencia, contando para esto con herramientas digitales como la  realidad virtual y realidad aumentada."
+    "services":{
+        "title":"SERVICIOS WEB",
+        "paragraph":"Tener un sitio web hoy en día es mas accesible y fundamental para estar inmersos en las oportunidades que nos ofrece el mercado virtual.   Nosrotros te acompanamos a disenar tu proyecto con un diseno y desarrollo web vanguardista y creativo transformando tu web en una experiencia, contando para esto con herramientas digitales como la  realidad virtual y realidad aumentada."
     },
-    "SIGHTSEEING":{
-        "TITLE":"COACHING TURISMO VIRTUAL",
-        "PARAGRAPH.0":"El Turismo también esta en camino a la nueva era digital, donde a través del uso de plataformas y herramientas digitales como la realidad virtual las personas puedan visitar lugares de interés como zonas arqueológicas milenarias, edificios emblemáticos, centros históricos y hasta sumergirse en misterioso lagos de manera  interactiva mas alla de su",
-        "PARAGRAPH.1":"imaginacion.Aprende con nosotros a aplicar estrategias y herramientas digitales que te ayuden a generar nuevos proyectos para un sitio turistico donde se brinde una experiencia que motive a los nuevos turistas virtuales a viajar a través del tiempo y el ciberespacio a lugares magicos. Laboratorio de Virtualizacion del Patrimonio Turistico."
+    "sightseeing":{
+        "title":"COACHING TURISMO VIRTUAL",
+        "paragraph.0":"El Turismo también esta en camino a la nueva era digital, donde a través del uso de plataformas y herramientas digitales como la realidad virtual las personas puedan visitar lugares de interés como zonas arqueológicas milenarias, edificios emblemáticos, centros históricos y hasta sumergirse en misterioso lagos de manera  interactiva mas alla de su",
+        "paragraph.1":"imaginacion.Aprende con nosotros a aplicar estrategias y herramientas digitales que te ayuden a generar nuevos proyectos para un sitio turistico donde se brinde una experiencia que motive a los nuevos turistas virtuales a viajar a través del tiempo y el ciberespacio a lugares magicos. Laboratorio de Virtualizacion del Patrimonio Turistico."
     },
-    "DEVELOPERS":{
-        "TITLE":"HEAD HUNTING DEVELOPERS",
-        "PARAGRAPH.0":"La experiencia de vivir en un país cosmopolita al otro lado del mundo te brindará la oportunidad de ampliar tu visión y desarrollar nuevas capacidades como programador en un entorno diverso y de",
-        "PARAGRAPH.1":"alto nivel. Nosotros te asesoramos en base a nuestra experiencia vivida en Nueva Zelanda, y te contactamos con empresas interesadas en expandir su equipo y conocer nuevas culturas."
-    
+    "developers":{
+        "title":"HEAD HUNTING DEVELOPERS",
+        "paragraph.0":"La experiencia de vivir en un país cosmopolita al otro lado del mundo te brindará la oportunidad de ampliar tu visión y desarrollar nuevas capacidades como programador en un entorno diverso y de",
+        "paragraph.1":"alto nivel. Nosotros te asesoramos en base a nuestra experiencia vivida en Nueva Zelanda, y te contactamos con empresas interesadas en expandir su equipo y conocer nuevas culturas."    
     }
 }
