AlexQuijote Commit 32. Mejora en la página de nosotros, montaje en fotos de Samantha y Melania.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -81,7 +81,7 @@
         "person-3_description":"Gestora de proyectos tecnológico-culturales para agencias de desarrollo internacionales, instituciones públicas y de la sociedad civil; considerando la Cultura e Innovación (C+I) para generar cambios positivos haciendo de cada proyecto una experiencia.",
         "person-4":"Samantha Ayleen Rueda",
         "person-4_description":"Egresada de idiomas, y artista apasionada por la tecnología y cultura libre, deseo que a través de éstas, acontesca un cambio social.",
-        "person-5":"Melania F. San Miguel Chacón",
+        "person-5":"Melania San Miguel Chacón",
         "person-5_description":"Licenciada en Turismo por la Universidad Mayor de San Andrés. Facilitadora certificada por la OIT, he encabezado equipos para la implementación de programas de capacitación, organización de eventos, realización de material educativo e investigaciones. Mi trabajo gira en torno a temas relacionados a la gestión del patrimonio natural y cultural, al desarrollo de la cultura emprendedora, al fortalecimiento de capacidades personales, docencia universitaria e investigación, al desarrollo de emprendimientos en las áreas urbana y rural, así como al buen aprovechamiento de los recursos turísticos, con una perspectiva de sostenibilidad.",
         "paragraph":"Está compuesto por un equipo de innovadores con experiencia, conocimiento y responsabilidad en diferentes áreas, desde el desarrollo de plataformas, soluciones blockchain y servicios digitales enfocados en cambiar la experiencia del usuario hasta la asesoría en cultura digital desde enfoques interculturales."
     },
